--- a/experiments/priors/priors-1.html
+++ b/experiments/priors/priors-1.html
@@ -43,18 +43,22 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> short questions about the habits of people. The HIT should take X minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> short questions about the habits of people. The HIT should take 5 minutes. Please pay attention, thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mhtessler@stanford.edu">mhtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
   </div>
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>Imagine you've met an alien from another planet. The alien is interested in how often people take various actions. She is going to ask you about an action (e.g. "brushing your teeth") and wants to know how often a typical person does this (e.g. "twice a day").</p>
+    <p>In this experiment, we are interested in how common certain actions are (for example: brushing one's teeth). 
+      You will be asked to provide your best guess as to the percentage of the US population that has done the action before. 
+      You will also be asked to rate how frequently a typical person does this action (for example: you might say the typical person brushes her teeth twice a day).</p>
     <button onclick="_s.button()">Continue</button>
   </div>
 
   <div class="slide" id="single_trial">
+    <br>
+    <br>
     <p class="question1">{{}}</p>
 
     <p class="slider_number"></p>
@@ -63,6 +67,7 @@
       <tr><td colspan="2"><div id="single_slider" class="slider"></div></td></tr>
     </table>
 
+    <br>
     <p class="question2">{{}}</p>
 
     <input type="text" id="text_response" maxlength="3" size ="3"> times per </input>
