--- a/experiments/priors/priors-1.html
+++ b/experiments/priors/priors-1.html
@@ -80,7 +80,7 @@
         <label><option value="life">life time</option></label>
      </select>
     <button onclick="_s.button()">Continue</button>
-    <p class="err">Please write something.</p>
+    <p class="err" style="color:red">Please respond to all of the questions.</p>
   </div>
 
   <div class="slide" id="one_slider">
@@ -128,6 +128,14 @@
       <label><input type="radio"  name="assess" value="Yes"/>Yes</label>
       <label><input type="radio"  name="assess" value="Confused"/>I was confused</label>
 
+      <p>Were there any problems or bugs in the experiment?</p>
+      <textarea id="problems" rows="2" cols="50"></textarea>
+
+
+      <p>What do you think is a fair price for the work you did?</p>
+      <textarea id="fairprice" rows="1" cols="10"></textarea>
+
+
       <p>Gender:
         <select id="gender">
           <label><option value=""/></label>
@@ -161,7 +169,7 @@
         <label><option value="2">Better than average HIT</option></label>
       </select>
 
-      <p>We would be interested in any comments you have about this experiment. Please type them here:</p>
+      <p>Any additional comments about this experiment:</p>
       <textarea id="comments" rows="3" cols="50"></textarea>
       <br/>
       <button onclick="_s.submit()">Submit</button>
