Add more elaborate instrucitons

--- a/experiments/priors/priors-1.html
+++ b/experiments/priors/priors-1.html
@@ -50,9 +50,11 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>In this experiment, we are interested in how common certain actions are (for example: brushing one's teeth). 
+    <p>In this experiment, we are interested in how common certain actions are (for example: <em>brushing one's teeth</em>). 
       You will be asked to provide your best guess as to the percentage of the US population that has done the action before. 
-      You will also be asked to rate how frequently a typical person does this action (for example: you might say the typical person brushes her teeth twice a day).</p>
+      You will also be asked to rate how frequently a typical person does this action (for example: you might say the typical person brushes her teeth <em>2 times per day</em>).</p>
+
+      <p>Please note: You will be asked to choose the appropriate time window (for example: <em>per day</em>). If the action is extremely rare (for example, <em>jumping out of a plane</em>), you can just report the total number of times that a typical person will do this in their life, by choosing the rate <em>per life time</em>.</p>
     <button onclick="_s.button()">Continue</button>
   </div>
 
