Add warning of comprehension q

--- a/experiments/priors/priors-1.html
+++ b/experiments/priors/priors-1.html
@@ -49,8 +49,8 @@
   </div>
 
   <div class="slide" id="instructions">
-    <h3>Please read the following instructions</h3>
-    <p>In this experiment, we are interested in how common people believe certain actions are (for example: <em>brushing one's teeth</em>). 
+    <h3>Instructions</h3>
+    <p>Please read carefully. There will be a comprehension question on the next slide.<br> In this experiment, we are interested in how common people believe certain actions are (for example: <em>brushing one's teeth</em>). 
       You will be asked to provide your best guess as to the <strong>percentage</strong> of the US population <strong>that has done the action before</strong>. 
       You will also be asked to rate <strong>how frequently a typical person</strong> does this action (for example: you might say the typical person brushes her teeth <em>2 times per day</em>).</p>
 
