record data; add some names

--- a/experiments/truth-judgments/tj-1.html
+++ b/experiments/truth-judgments/tj-1.html
@@ -42,7 +42,7 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will read a fact about a person and be asked to judge whether or not you agree or disagree with a sentence about that person. There are <span class="total-num">{{}}</span> sentences in total. The HIT should take approximately 5 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will read a fact about a person and be asked to judge a sentence about that person. There are <span class="total-num">{{}}</span> sentences in total. The HIT should take approximately 5 minutes. Please pay attention, thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mhtessler@stanford.edu">mhtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
   </div>
@@ -50,7 +50,7 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>On each trial, you will read a fact about a person and be asked whether or not you would agree with another sentence about that person. </p>
+    <p>On each trial, you will read a fact about a person and be asked whether or not you would describe the person by a particular sentence.</p>
       Press <strong><span id="agree-key">{{}}</span></strong> if you agree with the statement. <br>
       Press <strong><span id="disagree-key">{{}}</span></strong> if you disagree with it.
     </p>
