add unique turker information

--- a/experiments/truth-judgments/tj-2.html
+++ b/experiments/truth-judgments/tj-2.html
@@ -34,6 +34,9 @@
     <!-- experiment file -->
     <script src="js/tj-2.js"></script>
     <script src="js/stims-2.js"></script>
+
+    <script src="../../../_shared/js/uniqueturker.js"></script>
+
   </head>
 
 <body onload="init();">
@@ -43,6 +46,9 @@
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
     <p id="instruct-text">You will read a fact about a person and be asked to judge a sentence about that person. There are <span class="total-num">{{}}</span> sentences in total. The HIT should take approximately 5 minutes. Please pay attention, thanks!</p>
+
+    <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Persons 041</strong>) throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series.</p>
+
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mhtessler@stanford.edu">mhtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
   </div>
