add men women Qs, slot for defaultFreq

--- a/experiments/priors/priors-2.html
+++ b/experiments/priors/priors-2.html
@@ -97,12 +97,20 @@
   <div class="slide" id="single_trial">
     <br>
     <br>
-    <p class="question1">{{}}</p>
-
-
-    <input type="text" id="n_people" maxlength="3" size ="3"> out of every </input>
+    <p class="question1a">{{}}</p>
+    <input type="text" id="n_people_a" maxlength="3" size ="3"> out of every </input>
     <select id="comparison">
-        <label><option value="100">100</option></label>
+        <label><option value="1000">1000</option></label>
+        <label><option value="10000" >10,000</option></label>
+        <label><option value="100000">100,000</option></label>
+        <label><option value="1000000">million</option></label>
+        <label><option value="10000000">10 million</option></label>
+     </select>
+
+
+    <p class="question1b">{{}}</p>
+    <input type="text" id="n_people_b" maxlength="3" size ="3"> out of every </input>
+    <select id="comparison">
         <label><option value="1000">1000</option></label>
         <label><option value="10000" >10,000</option></label>
         <label><option value="100000">100,000</option></label>
@@ -118,9 +126,8 @@
     </table>
  -->
     <br>
-    <p class="question2">{{}}</p>
-
-    <input type="text" id="text_response" maxlength="3" size ="3"> times per </input>
+    <p class="question2a">{{}}</p>
+    <input type="text" id="text_response_a" maxlength="3" size ="3"> times per </input>
     <select id="frequency">
         <label><option value="-1"></option></label>
         <label><option value="day">day</option></label>
@@ -129,6 +136,19 @@
         <label><option value="year">year</option></label>
         <label><option value="life">life time</option></label>
      </select>
+    <p class="question2b">{{}}</p>
+    <input type="text" id="text_response_b" maxlength="3" size ="3"> times per </input>
+    <select id="frequency">
+        <label><option value="-1"></option></label>
+        <label><option value="day">day</option></label>
+        <label><option value="week" >week</option></label>
+        <label><option value="month">month</option></label>
+        <label><option value="year">year</option></label>
+        <label><option value="life">life time</option></label>
+     </select>
+
+    <br>
+    <br>
     <button onclick="_s.button()">Continue</button>
     <p class="err" style="color:red">Please respond to all of the questions.</p>
   </div>
