default dropdown settings; error msg; left-justify

--- a/experiments/priors/priors-2.html
+++ b/experiments/priors/priors-2.html
@@ -99,7 +99,7 @@
     <br>
     <p class="question1a">{{}}</p>
     <input type="text" id="n_people_a" maxlength="3" size ="3"> out of every </input>
-    <select id="comparison">
+    <select id="comparison_a">
         <label><option value="1000">1000</option></label>
         <label><option value="10000" >10,000</option></label>
         <label><option value="100000">100,000</option></label>
@@ -109,15 +109,14 @@
 
 
     <p class="question1b">{{}}</p>
-    <input type="text" id="n_people_b" maxlength="3" size ="3"> out of every </input>
-    <select id="comparison">
+    <input type="text" id="n_people_b" maxlength="3" size ="3"> out of every </input> 
+    <select id="comparison_b">
         <label><option value="1000">1000</option></label>
         <label><option value="10000" >10,000</option></label>
         <label><option value="100000">100,000</option></label>
         <label><option value="1000000">million</option></label>
         <label><option value="10000000">10 million</option></label>
      </select>
-
 
 <!--     <p class="slider_number"></p>
     <table id="slider_table" class="slider_table">
@@ -128,23 +127,19 @@
     <br>
     <p class="question2a">{{}}</p>
     <input type="text" id="text_response_a" maxlength="3" size ="3"> times per </input>
-    <select id="frequency">
-        <label><option value="-1"></option></label>
-        <label><option value="day">day</option></label>
+    <select id="frequency_a">
         <label><option value="week" >week</option></label>
         <label><option value="month">month</option></label>
         <label><option value="year">year</option></label>
-        <label><option value="life">life time</option></label>
+        <label><option value="5 years">5 years</option></label>
      </select>
     <p class="question2b">{{}}</p>
     <input type="text" id="text_response_b" maxlength="3" size ="3"> times per </input>
-    <select id="frequency">
-        <label><option value="-1"></option></label>
-        <label><option value="day">day</option></label>
+    <select id="frequency_b">
         <label><option value="week" >week</option></label>
         <label><option value="month">month</option></label>
         <label><option value="year">year</option></label>
-        <label><option value="life">life time</option></label>
+        <label><option value="5 years">5 years</option></label>
      </select>
 
     <br>
