--- a/experiments/priors/priors-2.html
+++ b/experiments/priors/priors-2.html
@@ -34,7 +34,9 @@
     <!-- experiment file -->
     <script src="js/priors-2.js"></script>
     <script src="js/stims-2.js"></script>
-    
+
+    <script src="../../../_shared/js/uniqueturker.js"></script>
+
 </head>
 
 <body onload="init();">
@@ -43,23 +45,23 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> short questions about people's habits. The HIT should take 5 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> sets of questions about people's habits. The HIT should take 8 minutes. Please pay attention, thanks!</p>
+
+    <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Actions 494</strong>) throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series.</p>
+
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mhtessler@stanford.edu">mhtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
   </div>
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>Please read carefully. There will be a comprehension question on the next slide.<br> In this experiment, we are interested in how common people believe certain actions are (for example: <em>going to an amusement park</em>). 
-
-      You will be asked to estimate <strong>how many men or women have done the action before</strong>. You will respond by saying "10 out of every 1000" people have done this before. You can change either numbers (the second number will default to 1000). 
-</p>
-<p>
-      You will also be asked to rate <strong>how frequently a typical man or woman</strong> does this action (for example: you might say the typical person goes an amusement park <em>one time per year</em>).</p>
-
-<!--       <p>For some actions, 
- -->
-      <p>Please note: You will be asked to choose the appropriate time window (for example: <em>per day</em>). If the action is extremely rare (for example, <em>jumping out of a plane</em>), you can just report the total number of times that a typical person will do this in their life, by choosing the <em>per life time</em> rate.</p>
+    <p style="font-family:times; font-size:20px; text-align: justify;">Please read carefully. There will be a comprehension question on the next slide.</p>
+    <p>In this experiment, we are interested in how common people believe certain actions are (for example: <em>going to an amusement park</em>).
+    You will be asked to estimate <strong>how many men or women have done the action before</strong>. You will report <em>how many people in 1000</em> have done the action before. You can change the second number if it is more rare than 1 out of 1000.
+  </p>
+  <p>
+    You will also be asked to rate <strong>how frequently a typical woman or man</strong> does this action. You will report this in <em>number of times in a year</em>. You can change the time interval (default: one year) if you'd like.
+  </p>
     <button onclick="_s.button()">Continue</button>
   </div>
 
@@ -98,7 +100,7 @@
     <br>
     <br>
     <p class="question1a">{{}}</p>
-    <input type="text" id="n_people_a" maxlength="3" size ="3"> out of every </input>
+    <input type="text" id="n_people_a" maxlength="3" size ="3" tabindex="1"> out of every </input>
     <select id="comparison_a">
         <label><option value="1000">1000</option></label>
         <label><option value="10000" >10,000</option></label>
@@ -109,7 +111,7 @@
 
 
     <p class="question1b">{{}}</p>
-    <input type="text" id="n_people_b" maxlength="3" size ="3"> out of every </input> 
+    <input type="text" id="n_people_b" maxlength="3" size ="3" tabindex="2"> out of every </input> 
     <select id="comparison_b">
         <label><option value="1000">1000</option></label>
         <label><option value="10000" >10,000</option></label>
@@ -126,7 +128,7 @@
  -->
     <br>
     <p class="question2a">{{}}</p>
-    <input type="text" id="text_response_a" maxlength="3" size ="3"> times per </input>
+    <input type="text" id="text_response_a" maxlength="3" size ="3" tabindex="3"> times per </input>
     <select id="frequency_a">
         <label><option value="week" >week</option></label>
         <label><option value="month">month</option></label>
@@ -134,7 +136,7 @@
         <label><option value="5 years">5 years</option></label>
      </select>
     <p class="question2b">{{}}</p>
-    <input type="text" id="text_response_b" maxlength="3" size ="3"> times per </input>
+    <input type="text" id="text_response_b" maxlength="3" size ="3" tabindex="4"> times per </input>
     <select id="frequency_b">
         <label><option value="week" >week</option></label>
         <label><option value="month">month</option></label>
