fix timing, instructions

--- a/experiments/priors/priors-2.html
+++ b/experiments/priors/priors-2.html
@@ -45,7 +45,7 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> sets of questions about people's habits. The HIT should take 8 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> sets of questions about people's habits. The HIT should take 10-12 minutes. Please pay attention, thanks!</p>
 
     <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Actions 494</strong>) throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series.</p>
 
@@ -60,7 +60,7 @@
     You will be asked to estimate <strong>how many men or women have done the action before</strong>. You will report <em>how many people in 1000</em> have done the action before. You can change the second number if it is more rare than 1 out of 1000.
   </p>
   <p>
-    You will also be asked to rate <strong>how frequently a typical woman or man</strong> does this action. You will report this in <em>number of times in a year</em>. You can change the time interval (default: one year) if you'd like.
+    You will also be asked to rate <strong>how frequently a typical woman or man</strong> does this action. You will report this in <em>number of times in a year</em>. You can change the time interval (default: one year) if there is a more appropriate interval.
   </p>
     <button onclick="_s.button()">Continue</button>
   </div>
