--- a/experiments/truth-judgments/tj-3-preventatives.html
+++ b/experiments/truth-judgments/tj-3-preventatives.html
@@ -45,7 +45,7 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will read a fact about a person and be asked to judge a sentence about that person. There are <span class="total-num">{{}}</span> sentences in total. The HIT should take approximately 3 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will read information about a person and be asked to judge a sentence about that person. There are <span class="total-num">{{}}</span> sentences in total. The HIT should take approximately 4 minutes. Please pay attention, thanks!</p>
 
     <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Persons 251</strong>) throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series.</p>
 
@@ -56,7 +56,7 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>On each trial, you will read a fact about a person and be asked whether or not you agree with a sentence about that person.</p>
+    <p>On each trial, you will read information about a person and be asked whether or not you agree with a sentence about that person.</p>
       Press <strong><span id="agree-key">{{}}</span></strong> if you agree with the statement. <br>
       Press <strong><span id="disagree-key">{{}}</span></strong> if you disagree with it.
     </p>
