polish predictive expt

--- a/experiments/priors/predictive-1.html
+++ b/experiments/priors/predictive-1.html
@@ -33,7 +33,7 @@
 
     <!-- experiment file -->
     <script src="js/predictive-1.js"></script>
-    <script src="../truth-judgments/js/stims-2.js"></script>
+    <script src="js/stims-3.js"></script>
 
     <script src="../../../_shared/js/uniqueturker.js"></script>
 
@@ -45,9 +45,10 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will asked <span id="n_trials">{{}}</span> sets of questions about people's habits. The HIT should take 10-12 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will read information about a person and be asked to make a prediction about his or her future actions.
+    There are <span id="n_trials">{{}}</span> questions. The HIT should take 4 minutes. Please pay attention, thanks!</p>
 
-    <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Actions 494</strong>) throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series.</p>
+    <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: This HIT series (name: <strong>Language Study - Persons 251</strong>) was originally posted on 01/13/16. You are not permitted to take the HIT again. As well, there will be multiple posted versions of this HIT throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series. I apologize for any inconvenience.</p>
 
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mhtessler@stanford.edu">mhtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
