missing utils.fillArray function from utils library

--- a/experiments/priors/predictive-1.html
+++ b/experiments/priors/predictive-1.html
@@ -34,8 +34,9 @@
     <!-- experiment file -->
     <script src="js/predictive-1.js"></script>
     <script src="js/stims-3.js"></script>
-
-    <script src="../../../_shared/js/uniqueturker.js"></script>
+    
+    <!-- I don't have this in my shared folder so I'm commenting it out -->
+    <!--<script src="../../../_shared/js/uniqueturker.js"></script>-->
 
 </head>
 
