--- a/experiments/deverbnoun/predictive-1.html
+++ b/experiments/deverbnoun/predictive-1.html
@@ -33,7 +33,7 @@
 
     <!-- experiment file -->
     <script src="js/predictive-1.js"></script>
-    <script src="js/stims-3.js"></script>
+    <script src="js/predictive-stims-1.js"></script>
     
     <!-- I don't have this in my shared folder so I'm commenting it out -->
     <!--<script src="../../../_shared/js/uniqueturker.js"></script>-->
