Changed the question to reflect habitual or noun verb

--- a/experiments/deverbnoun/dvnoun-1.html
+++ b/experiments/deverbnoun/dvnoun-1.html
@@ -102,11 +102,10 @@
     <br>
     <br>
 
-      <p class="frequency"></p>
-    <p class="extraSentence"></p>
+    <p class="question"></p>
 
     <br>
-    <p class="question">{{}}</p>
+    <p class="targetSentence"></p>
 
     <!-- <input type="text" id="text_response" maxlength="3" size ="3" tabindex="3"> times </input> -->
 
