make dvnoun experiment runnable

--- a/experiments/deverbnoun/dvnoun-1.html
+++ b/experiments/deverbnoun/dvnoun-1.html
@@ -34,7 +34,7 @@
     <!-- experiment file -->
     <script src="js/dvnoun-1.js"></script>
     <script src="js/dvnoun-stims-1.js"></script>
-    
+
     <!-- I don't have this in my shared folder so I'm commenting it out -->
     <!--<script src="../../../_shared/js/uniqueturker.js"></script>-->
 
@@ -46,24 +46,25 @@
   <div class="slide" id="i0" >
     <img src="../../../_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will read information about a person and be asked to make a prediction about his or her future actions.
-    There are <span id="n_trials">{{}}</span> questions. The HIT should take 4 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will read information about a person and be asked to make a prediction about them.
+    There are <span id="n_trials">{{}}</span> questions. The HIT should take 5 minutes. Please pay attention, thanks!</p>
 
-    <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: This HIT series (name: <strong>Language Study - Persons 251</strong>) was originally posted on 01/13/16. You are not permitted to take the HIT again. As well, there will be multiple posted versions of this HIT throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series. I apologize for any inconvenience.</p>
+    <p style="font-family:courier; font-size:16px; text-align: justify;">Please note: This HIT series (name: <strong>Language Study - Persons 251</strong>) there will have multiple posted versions of this HIT throughout the day. Please attempt only one HIT this series. You will not be allowed to complete multiple HITs in this series. I apologize for any inconvenience.</p>
 
     <button id="start_button" type="button">Start Experiment</button>
-    <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mhtessler@stanford.edu">mhtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
+    <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact M.H. Tessler at <a href="mailto://mtessler@stanford.edu">mtessler@stanford.edu</a> or Noah Goodman, at ngoodman@stanford.edu. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
   </div>
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p style="font-family:times; font-size:20px; text-align: justify;">Please read carefully. There will be a comprehension question on the next slide.</p>
-    <p>In this experiment, we are interested in how common people believe certain actions are (for example: <em>going to an amusement park</em>).
-    You will be asked to estimate <strong>how many men or women have done the action before</strong>. You will report <em>how many people in 1000</em> have done the action before. You can change the second number if it is more rare than 1 out of 1000.
+    <p>In this experiment, we are interested in how common certain actions are (for example: <em>how often someone goes to an amusement park</em>).
+    You will be given a fact about a person, and be asked to estimate how often a person does the action.
   </p>
   <p>
-    You will also be asked to rate <strong>how frequently a typical woman or man</strong> does this action. You will report this in <em>number of times in a year</em>. You can change the time interval (default: one year) if there is a more appropriate interval.
+    You will respond by filling how many times in an interval they do the action (for example: 4 times per week).
+    You need to adjust the interval to whatever you feel is most appropraite for the action.
   </p>
+  <p> Click continue to begin the experiment. </p>
     <button onclick="_s.button()">Continue</button>
   </div>
 
