--- a/experiments/deverbnoun/dvnoun-1.html
+++ b/experiments/deverbnoun/dvnoun-1.html
@@ -36,7 +36,7 @@
     <script src="js/dvnoun-stims-1.js"></script>
 
     <!-- I don't have this in my shared folder so I'm commenting it out -->
-    <!--<script src="../../../_shared/js/uniqueturker.js"></script>-->
+    <script src="../../../_shared/js/uniqueturker.js"></script>
 
 </head>
 
